# ai-goose

./: .gitignore  .npmrc  AGENTS.md  ARCHITECTURE.md  Cargo.toml  Justfile  README.md  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  start-desktop.sh  start-web.sh  start.sh  tsconfig.node.json
.github/workflows/: ci.yml
config/: playwright.config.ts  vitest.config.ts  vitest.integration.config.ts
config/electron/: forge.config.ts  forge.deb.desktop
config/vite/: vite.config.mts  vite.main.config.mts  vite.renderer.config.mts
crates/goose/: Cargo.toml
crates/goose-cli/: Cargo.toml
crates/goose-cli/src/: cli.rs  lib.rs  logging.rs  main.rs
crates/goose-cli/src/commands/: configure.rs  info.rs  mod.rs  session.rs  term.rs
crates/goose-cli/src/commands/review/: handler.rs
crates/goose-cli/src/scenario_tests/: scenario_runner.rs
crates/goose-cli/src/session/: builder.rs  completion.rs  editor.rs  export.rs  input.rs  mod.rs  output.rs
crates/goose-providers/: Cargo.toml
crates/goose-providers/src/: lib.rs
crates/goose-types/: Cargo.toml
crates/goose-types/src/: conversation.rs  lib.rs  mcp_utils.rs  model.rs  thinking.rs  utils.rs
crates/goose-types/src/conversation/: message.rs  token_usage.rs  tool_result_serde.rs
crates/goose/examples/: agent.rs
crates/goose/src/: codex.rs  conversation_format.rs  download_manager.rs  lib.rs  login_shell.rs  model_config.rs  prompt_template.rs  scheduler.rs  session_context.rs  sources.rs
crates/goose/src/acp/: mod.rs  provider.rs  response_builder.rs  server.rs  server_factory.rs
crates/goose/src/acp/server/: agent_mentions.rs  agent_requests.rs  apps.rs  config.rs  custom_dispatch.rs  dispatch.rs  extensions.rs  fork_session.rs  list_sessions.rs  load_session.rs  local_inference.rs  manage_sessions.rs  new_session.rs  providers.rs  resources.rs  tools.rs
crates/goose/src/agents/: agent.rs  extension.rs  extension_manager.rs  mcp_client.rs  mod.rs  prompt_manager.rs  reply_parts.rs  subagent_handler.rs  tool_execution.rs  types.rs
crates/goose/src/agents/platform_extensions/: apps.rs  ext_manager.rs  mod.rs  orchestrator.rs  summon.rs  todo.rs
crates/goose/src/agents/platform_extensions/analyze/: parser.rs
crates/goose/src/agents/snapshots/: goose__agents__prompt_manager__tests__all_platform_extensions.snap  goose__agents__prompt_manager__tests__basic.snap  goose__agents__prompt_manager__tests__one_extension.snap  goose__agents__prompt_manager__tests__typical_setup.snap
crates/goose/src/config/: base.rs  extensions.rs  migrations.rs  mod.rs
crates/goose/src/execution/: manager.rs
crates/goose/src/gateway/: handler.rs
crates/goose/src/goose_apps/: app.rs
crates/goose/src/hints/: load_hints.rs  mod.rs
crates/goose/src/hooks/: mod.rs
crates/goose/src/permission/: mod.rs
crates/goose/src/prompts/: system.md
crates/goose/src/providers/: base.rs  catalog_util.rs  cli_common.rs  codex.rs  init.rs  mod.rs  provider_registry.rs  provider_secrets.rs  provider_test.rs
crates/goose/src/providers/inventory/: mod.rs  registrations.rs
crates/goose/src/session/: chat_history_search.rs  diagnostics.rs  extension_data.rs  last_message_snippet.rs  mod.rs  session_manager.rs  session_naming.rs
crates/goose/src/session/import_formats/: claude_code.rs  codex.rs  mod.rs  pi.rs
crates/goose/src/skills/: mod.rs
crates/goose/src/slash_commands/: mod.rs  slash_command.rs  types.rs
crates/goose/tests/: acp_custom_provider_methods_test.rs  acp_provider_test.rs  acp_server_test.rs  acp_transport_auth_test.rs  mcp_integration_test.rs  providers.rs  session_id_propagation_test.rs
crates/goose/tests/acp_common_tests/: mod.rs
desktop/: .gitignore  I18N.md  README.md  eslint.config.js  forge.config.ts  forge.rpm.desktop  index.html  package.json  vite.main.config.mts  vite.renderer.config.mts
desktop/scripts/: clean-vite-cache.js  unregister-deeplink-protocols.js
desktop/src/: App.test.tsx  App.tsx  app-update.yml  backendStatus.test.ts  backendStatus.ts  browserHost.ts  gooseServe.ts  gooseServeLeaseRegistry.test.ts  gooseServeLeaseRegistry.ts  main.ts  preload.ts  startupDiagnostics.test.ts  startupDiagnostics.ts  terminalManager.ts  toasts.tsx
docs/: I18N.md
documentation/: docusaurus.config.ts
documentation/docs/: quickstart.md
documentation/static/: servers.json
scripts/: README.md  build-desktop.sh  build-main.js  generate-mac-update-manifest.js  i18n-compile.js  i18n-validate-locale.js  prepare-platform-binaries.js  start-desktop.sh  start-web.sh  verify-mac-update-resources.js
sdk/: README.md  package.json  tsconfig.test.json
sdk/src/: client-capabilities.ts  goose-client.ts  http-stream.ts  index.ts  mcp-apps.ts
sdk/tests/: client-callbacks.test.ts
src/: App.tsx  app-update.yml  browserHost.ts  preload.ts  renderer.tsx  sessions.ts  suspense-loader.tsx
src/__tests__/: createSession.test.ts  sessions.test.ts
src/acp/: acpConnection.ts  autocomplete.ts  chatNotifications.ts  chatSessionController.ts  chatSessionStore.ts  createWebSocketStream.ts  diagnostics.ts  dictation.ts  errors.ts  extensions.ts  local-inference.ts  permissions.ts  prompt.ts  providers.ts  sessionNotificationAdapter.ts  sessions.ts  sources.ts
src/appearance/: appearance.test.ts
src/codex/: browserCodex.ts  client.ts  codexProcess.ts
src/components/: ChatInputCard.tsx  ChatSessionsContainer.test.tsx  CodeViewer.test.tsx  CodeViewer.tsx  ElicitationRequest.test.tsx  ElicitationRequest.tsx  ErrorBoundary.tsx  ExtensionInstallModal.tsx  FileChangeCard.tsx  GooseMessage.test.tsx  Hub.test.tsx  Hub.tsx  ImagePreview.tsx  LauncherView.tsx  LoadingGoose.tsx  MarkdownContent.test.tsx  MarkdownContent.tsx  MermaidDiagram.tsx  MessageUsageStats.test.tsx  MessageUsageStats.tsx  PlanSteps.test.tsx  ProgressiveMessageList.tsx  TelemetryConsentPrompt.tsx  ToolCallConfirmation.tsx  ToolCallGroup.tsx  ToolCallWithResponse.test.tsx  ToolCallWithResponse.tsx  UserMessage.test.tsx  WorkToolActivity.tsx
src/constants/: events.ts
src/contexts/: WorkspacePanelsContext.tsx
src/hooks/: useAutoSubmit.test.tsx  (+4 more)
(+411 files in other folders)
