[package]
name = "goose-cli"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description.workspace = true

[lints]
workspace = true

[[bin]]
name = "goose"
path = "src/main.rs"

[[bin]]
name = "generate_manpages"
path = "src/bin/generate_manpages.rs"

[dependencies]
clap_mangen = { version = "0.3", default-features = false }
goose = { path = "../goose", default-features = false }
goose-types = { path = "../goose-types", default-features = false }
rmcp = { workspace = true }
clap = { workspace = true }
cliclack = { version = "0.5", default-features = false }
console = { version = "0.16", default-features = false, features = ["std"] }
dotenvy = { workspace = true }
bat = { version = "0.26", default-features = false, features = ["regex-onig"] }
anyhow = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
futures = { workspace = true }
serde = { workspace = true }
serde_yaml = { workspace = true }
strum = { workspace = true }
tempfile = { workspace = true }
etcetera = { workspace = true }
rand = { workspace = true }
rustyline = { version = "18", default-features = false, features = ["custom-bindings", "with-dirs", "with-file-history"] }
tracing = { workspace = true }
chrono = { workspace = true }
tracing-subscriber = { workspace = true, features = ["env-filter", "fmt", "json", "time"] }
shlex = { version = "2.0", default-features = false, features = ["std"] }
async-trait = { workspace = true }
base64 = { workspace = true }
regex = { workspace = true }
tar = { version = "=0.4.45", default-features = false }
reqwest = { workspace = true, features = ["blocking"] }
zip = { workspace = true }
bzip2 = { version = "0.6", default-features = false, features = ["default"] }
webbrowser = { workspace = true }
indicatif = { version = "0.18", default-features = false }
tokio-util = { workspace = true, features = ["compat", "rt"] }
anstream = { version = "1", default-features = false, features = ["auto"] }
open = { version = "5", default-features = false }
url = { workspace = true }
urlencoding = { workspace = true }
clap_complete = { version = "4", default-features = false }
comfy-table = { version = "7", default-features = false }
sha2 = { workspace = true }
sigstore-verify = { version = "0.10", default-features = false, optional = true }
axum.workspace = true
axum-server = { version = "0.8", default-features = false, optional = true }
clap_complete_nushell = { version = "4", default-features = false }

[target.'cfg(target_os = "windows")'.dependencies]
anstream = { version = "1", default-features = false, features = ["wincon"] }
winapi = { workspace = true, features = [
    "consoleapi",
    "processenv",
    "winbase",
    "wincon",
] }

[features]
default = [
    "tui",
    "telemetry",
    "nostr",
    "otel",
    "rustls-tls",
    "system-keyring",
    "update",
]
cuda = []
vulkan = []
mlx = []
telemetry = ["goose/telemetry"]
nostr = ["goose/nostr"]
otel = ["goose/otel"]
system-keyring = ["goose/system-keyring"]
tui = []
update = ["dep:sigstore-verify"]
portable-default = ["rustls-tls", "telemetry", "otel", "tui"]
# disables the update command
disable-update = []
rustls-tls = [
    "dep:axum-server",
    "reqwest/rustls",
    "axum-server/tls-rustls",
    "sigstore-verify?/rustls",
    "goose/rustls-tls",
]
native-tls = [
    "dep:axum-server",
    "reqwest/native-tls",
    "axum-server/tls-openssl",
    "sigstore-verify?/native-tls",
    "goose/native-tls",
]

[dev-dependencies]
env-lock.workspace = true
tempfile = { workspace = true }
test-case = { workspace = true }
tokio = { workspace = true }

[package.metadata.cargo-machete]
ignored = [
    # Used only in windows
    "winapi",
]
