[package]
name = "goose-providers"
version = "0.1.0-alpha.0"
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description.workspace = true

[lints]
workspace = true

[features]
default = []
rustls-tls = [
    "reqwest/rustls",
    "rmcp/reqwest",
]
native-tls = [
    "reqwest/native-tls",
    "rmcp/reqwest-native-tls",
]

[dependencies]
anyhow = { workspace = true }
async-trait = { workspace = true }
chrono = { workspace = true }
goose-provider-types = { version = "0.1.0-alpha.0", path = "../goose-provider-types", default-features = false }
reqwest = { workspace = true }
rmcp = { workspace = true, features = ["server", "macros"] }
serde_json = { workspace = true }
tracing = { workspace = true }
url = { workspace = true }

[dev-dependencies]
test-case = { workspace = true }
tokio = { workspace = true, features = ["rt-multi-thread"] }
wiremock.workspace = true
